removed link to projects page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                   </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="projects.html">Projects <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="">Projects <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Academics</a>
@@ -58,10 +58,12 @@
         </div>
         <div style="float:left; margin-top: 100px; width: 250px">
             <h3>Hi, I'm Natalie</h3>
-            <p>Welcome to my website!</p>
+            <p>I'm a 22 yr old who's just trying to make the world a better place.</p>
             <p>I recently received my Bachelor's degree in Computer Science from the University of Toronto. I am currently
-                looking for opportunities for Master's studies in Human-Centered AI/AI ethics.
+                looking for opportunities for Master's studies in Human-Centered AI/AI ethics. Outside academics, I am a bookworm, Marvel fan, 
+                football (soccer) enthusiast, and a hodophile*!
             </p>
+            <p style="font-size:small">*Someone who loves travelling</p>
         </div>
         
     </div>
