--- a/index.html
+++ b/index.html
@@ -69,9 +69,46 @@
     </div>
 
 
+
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <div style="display: inline-block; bottom:0; background-color: #e8faf5; width: 100%;padding:1.5em">
+      <h4>Interesting works related to Human-Centred AI and ethics in technology</h4>
+      <ul>
+        <li>
+          <a href="https://www.wired.com/story/twitter-ethical-ai-team/">
+            Elon Musk Has Fired Twitter’s ‘Ethical AI’ Team
+          </a> by Will Knight (Wired)
+        </li>
+        <li>
+          <a href="https://proceedings.mlr.press/v81/buolamwini18a.html">
+            Gender Shades: Intersectional Accuracy Disparities in Commercial Gender Classification
+          </a> by Joy Buolamwini and Timnit Gebru
+        </li>
+        <li>
+          <a href="https://doi.org/10.48550/arxiv.2106.11521">
+            ESR: Ethics and Society Review of Artificial Intelligence Research
+          </a> by Michael Bernstein et al. 
+        </li>
+        <li>
+          <a href="https://arxiv.org/abs/1607.06520">
+            Man is to computer programmer as woman is to homemaker? Debiasing word embeddings
+          </a> by Tolga Bolukbasi et al. 
+        </li>
+        <li>
+          <a href="Challenges in
+          measuring bias via open-ended language generation">
+            Challenges in
+    measuring bias via open-ended language generation
+          </a> by Afra Feyza Akyürek et al. 
+        </li>
+      </ul>
+    </div> 
 </div>
+
+  
 <div style="display: inline-block; bottom:0; background-color: #e3e3e3; width: 100%;">
     <div style="padding:25px">
         <h3>Contact</h3>
