added amphacks and 413 project

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- <div id="nav"></div> -->
     <div style="margin-top:2.5rem">
         <div style="float:left; margin-bottom: 2.5rem">
-            <img src="images/headshot.jpg" style="max-height: 10%; height:300px; margin: 100px;"/>
+            <img src="assets/images/headshot.jpg" style="max-height: 10%; height:300px; margin: 100px;"/>
         </div>
         <div style="float:left; margin-top: 100px; width: 250px">
             <h3>Hi, I'm Natalie</h3>
@@ -64,11 +64,24 @@
                 looking for opportunities for Master's studies in Human-Centered AI/AI ethics. Outside academics, I am a bookworm, Marvel fan, 
                 football (soccer) enthusiast, and a hodophile*!
             </p>
-            <p>Check out my resumé <a href='resume.pdf'>here</a></p>
+            <p>Check out my resumé <a href='assets/docs/resume.pdf'>here</a></p>
             <p style="font-size:small">*Someone who loves travelling</p>
         </div>
         
     </div>
+    <div style="display: inline-block; bottom:0; background-color: #e8faf5; width: 100%;padding-left:5rem">
+    <div style="float:left; margin-top: 100px; width: 250px">
+      <p>I had the opportunity to present my research for the first time at <a href="https://mscac.utoronto.ca/aria2022">ARIA</a>!</p>
+    <p>This is UofT's Applied Research in Action poster presentation for Master's students in the Computer Science program,
+      that I was lucky to be able to participate in. This is one of the biggest tech innovation showcases in Toronto that is run by the academic sector,
+      hosted in the incredible MaRS centre.
+    </p>
+    </div>
+    <div style="float:left; margin-bottom: 2.5rem">
+      <img src="assets/images/aria.jpg" style="max-height: 10%; height:500px; margin: 100px;"/>
+  </div>    
+    </div>
+
 
 
 
@@ -76,7 +89,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <div style="display: inline-block; bottom:0; background-color: #e8faf5; width: 100%;padding:1.5em">
+    <div style="display: inline-block; bottom:0; width: 100%;padding:1.5em">
       <h4>Interesting works related to Human-Centred AI and ethics in technology</h4>
       <ul>
         <li>
