--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
                 <li class="nav-item">
                   <a class="nav-link" href="projects.html">Projects <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="nav-link" href="#">Academics</a>
                 </li>
                 <li class="nav-item">
@@ -45,7 +45,7 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Fun Stuff</a>
-                  </li>
+                  </li> -->
               </ul>
             </div>     
           </nav>
